<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.EsyDigi.esyDigi.ChangePassword">
    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:text="@string/ConfirmPasrd"/>


    </android.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"


        android:layout_margin="@dimen/fab_margin"
        android:gravity="center_vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/CurrentPwdd"
            android:id="@+id/currentpass"
            android:singleLine="true"

            android:textColorHint="@color/white"
            android:paddingLeft="@dimen/fab_margin"
            android:background="@drawable/rectangular_border"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/NewPwdd"
            android:id="@+id/newpass"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColorHint="@color/white"
            android:paddingLeft="@dimen/fab_margin"
            android:background="@drawable/rectangular_border"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ConfirmPasrd"
            android:id="@+id/confirmpass"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColorHint="@color/white"
            android:paddingLeft="@dimen/fab_margin"
            android:background="@drawable/rectangular_border"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColorHint="@color/white"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/SUBMIT"
            android:textAllCaps="false"
            android:id= "@+id/submitPasswordChange"
            android:textColor="@color/white"
            android:background="@drawable/rectangular_border_pink"/>




    </LinearLayout>
</LinearLayout>