<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".TimerSettings">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/NotificationSettings"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />


            <TextView
                android:id="@+id/savenotification"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:background="#00670A"
                android:text="@string/Save"

                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/addbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@+id/barlayout"
        android:layout_marginTop="20dp"

        android:orientation="horizontal"

        android:weightSum="2">

        <TextView
            android:id="@+id/opencalender"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"


            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="#1a1a1a"
            android:gravity="center"
            android:text="@string/ChooseDayandTime"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/Add"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"

            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"

            android:text="@string/add"

            android:textColor="@android:color/white"

            android:textSize="@dimen/_15sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addbar"
        android:layout_above="@+id/spinnerview"
        android:layout_marginTop="@dimen/_10sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alrmlist_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/spinnerview"
        android:layout_width="match_parent"

        android:layout_height="@dimen/_120sdp"


        android:layout_alignParentBottom="true"
        android:background="@color/white"

        android:backgroundTint="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"

            android:background="#fff">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ChooseDayandTime"
                android:textColor="#C0C0C0"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_20sdp"

                android:gravity="right|center_vertical"
                android:text="@string/Done"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="#C0C0C0"
            android:orientation="horizontal"
            android:weightSum="2">


            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/black"

                />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="#E0E0E0" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>








